--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,41 +1,44 @@
-CC = cc
+SRC			= ft_memset ft_striteri ft_strmapi ft_putendl_fd ft_putnbr_fd ft_putstr_fd ft_itoa ft_putchar_fd ft_split ft_strtrim ft_strcat ft_strjoin ft_strcpy ft_substr ft_strdup ft_strnstr ft_calloc ft_strlcpy ft_strlcat ft_bzero ft_memchr ft_strchr ft_memcmp ft_memcpy ft_memmove ft_strlen ft_isalpha ft_isdigit ft_isalnum ft_isascii ft_isprint ft_toupper ft_tolower ft_strrchr ft_strncmp ft_atoi 
 
-CFLAGS = -Wall -Wextra -Werror
+BSRC		= ft_lstnew ft_lstadd_front ft_lstsize ft_lstlast ft_lstadd_back ft_lstdelone ft_lstclear ft_lstiter ft_lstmap
 
-SRCS = ft_isalnum.c ft_isalpha.c ft_isdigit.c ft_isascii.c ft_isprint.c ft_strlen.c ft_memset.c \
-ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
- ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c \
-ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
-ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_atol.c
+SRCS		= $(addsuffix .c, ${SRC})
 
-BONUS_SRCS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c \
-ft_lstclear.c ft_lstiter.c ft_lstmap.c
+BSRCS		= $(addsuffix .c, ${BSRC})
 
-HEADERS = libft.h 
+OBJS		= ${SRCS:.c=.o}
 
-OBJS = $(SRCS:.c=.o)
+BOBJS		= ${BSRCS:.c=.o}
 
-BONUS_OBJS = $(BONUS_SRCS:.c=.o)
+NAME		= libft.a
 
-NAME = libft.a
+CC			= cc
+RM			= rm -f
+AR			= ar rc
+RN			= ranlib
 
-all: $(NAME)
+CFLAGS		= -Wall -Wextra -Werror
 
-$(NAME): $(OBJS)
-	ar rcs $(NAME) $(OBJS)
+all:		$(NAME)
 
-%.o: %.c $(HEADERS)
-	$(CC) $(CFLAGS) -c $< -o $@
+.c.o:
+			${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
 
-bonus: $(OBJS) $(BONUS_OBJS)
-	ar rcs $(NAME) $(OBJS) $(BONUS_OBJS)
+$(NAME):	${OBJS}
+			${AR} ${NAME} ${OBJS}
+			${RN} ${NAME}
+			
 
-clean: 
-	rm -f $(OBJS) $(BONUS_OBJS)
+clean:
+			${RM} ${OBJS} ${BOBJS}
 
-fclean:
-	rm -f $(OBJS) $(NAME) $(BONUS_OBJS)
+fclean:		clean
+			${RM} $(NAME)
 
-re: fclean all
+re:			fclean all
 
-.PHONY: all fclean clean re bonus
+bonus:		${BOBJS}
+			${AR} ${NAME} ${BOBJS}
+			${RN} ${NAME}
+
+.PHONY:		all bonus clean fclean re
